--- a/home.html
+++ b/home.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Home Page</h1>
+    <nav>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="project.html">project</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
