--- a/portfolio.html
+++ b/portfolio.html
@@ -14,5 +14,7 @@
         </ul>
     </nav>
     <h1>Ahmed Mukhtar</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ullam praesentium vel aliquam consequatur corrupti minus delectus consectetur, officia est.
+    </p>
 </body>
 </html>
