--- a/portfolio.html
+++ b/portfolio.html
@@ -16,5 +16,7 @@
     <h1>Ahmed Mukhtar</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ullam praesentium vel aliquam consequatur corrupti minus delectus consectetur, officia est.
     </p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus odit error aliquam cum natus! Architecto a illo tempore ut explicabo maiores quos, perspiciatis ipsa maxime, rem hic in! Voluptatum, unde.
+    </p>
 </body>
 </html>
